# Archive

./: README.md
Android/: App.java
Android/BeerHub/BeerHub1/app/src/main/cpp/: CMakeLists.txt  crypto_jni.cpp
Android/xUtils/xUtilsLib/jni/: CMakeLists.txt  cpu_native.c  utils_native.c  utils_native.h
ClearDoc/: README.md  clDoc.dpr
Cripto/: Cripto.bdsproj  GetKeyUnit.dcu  GetKeyUnit.dfm  MainUnit.dcu
Delphi/: .gitignore
FileGet/: Drives.dcu  GetDirUnit.dfm
FindImages/: MainUnit.dfm  ViewUnit.pas
Fractal/: Fractal.dpr  MainUnit.dfm  OptionsUnit.dfm  OptionsUnit.pas
NemoTV/: AsyncUpdater.java  FontInfo.txt  Install.txt  NemoStatusBar.java  UpdateActivity.java  UpdateInstaller.java
NetApi/: Unit1.pas  netapi32.pas
Pascal/: Pair.pas
SQLExplorer/: ConnectUnit.dcu  MainUnit.pas  NodeAndItemWork.dcu  NodeAndItemWork.pas  TypeAndConstUnit.dcu  myClipboard.dcu
Send/: OtchotUnit.dcu  OtchotUnit.pas  Send.res
Shape/: MainUnit.dfm
Swimming/: ABOUT.dfm  Category.html  CategoryEditor.dcu  CategoryEditor.dfm  CategoryEditor.pas  CmptInfo.dcu  DlgUnit.dfm  DrawListView.dcu  DrawListView.pas  GetStrUnit.dcu  GetStrUnit.dfm  Global.pas  HTML.pas  MainUnit.dcu  NodeUnit.dcu  PntsEditor.dcu  Points.html  PtrcEditor.dcu  Query.dcu  SQLUnit.dcu  SQLUnit.pas  SwmInfo.dfm  SwmnSQL.dcu  SwmnSQL.pas  SwmnTables.pas  Swmng.dpr  TimeUnit.dcu  Word.dcu  Word.pas
TBoard/: BoardControl.pas  BoardCtrl.dproj
Tanks/: Author.txt  LevelUnit.pas  Tanks.dof  Tanks.dpr  TanksUnit.dcu  TanksUnit.pas  TypeConstUnit.dcu
TimeSync/: README.md
ToLang/: .gitignore  README.md  (+1 more)
(+1811 files in other folders)
